added default treePL smoothing level

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -39,6 +39,9 @@ CHUNKSIZE=10
 ; additional RAxML command line arguments
 EXAML_ARGS=-S -D -m GAMMA
 
+; treePL smoothing level
+TREEPL_SMOOTH=100
+
 ; inparanoid processed sequences
 INPARANOID_SEQ_URL=http://inparanoid.sbc.su.se/download/current/sequences/processed/FASTA
 INPARANOID_SEQ_FILE=data/INPARANOID/inparanoid.fa
