--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -1,14 +1,9 @@
+; XXX THIS FILE SHOULD CONTAIN VARIABLES THAT ARE NEEDED AS CONSTANTS 
+; FOR ALL *RUNS* OF THE PIPELINE. SO: *NOT* VARIABLE THINGS, LIKE PROJECT-
+; SPECIFIC LOCATIONS, AND ALSO *NOT* THINGS RELATED TO INSTALLATION.
+
 ; overall verbosity level
 VERBOSITY=-v
-
-; working directory
-WORK_DIR=results/primates/
-
-; list of species names
-NAME_LIST_FILE=results/primates/primates.txt
-
-; location of the fossil calibration table
-FOSSIL_TABLE_FILE=data/FOSSILS/Fossiletable.txt
 
 ; we should do this as follows:
 ; - by default all binaries are assumed to be on the PATH
@@ -43,28 +38,7 @@ EXAML_ARGS=-S -D -m GAMMA
 TREEPL_SMOOTH=100
 
 ; inparanoid processed sequences
-INPARANOID_SEQ_URL=http://inparanoid.sbc.su.se/download/current/sequences/processed/FASTA
 INPARANOID_SEQ_FILE=data/INPARANOID/inparanoid.fa
-INPARANOID_LOG_FILE=data/INPARANOID/inparanoid-formatdb.log
-INPARANOID_SQL_FILE=script/inparanoid.sql
-INPARANOID_SQL_URL=http://inparanoid.sbc.su.se/download/7.0_current/sqltables/
-INPARANOID_SQL_DIR=data/INPARANOID/sqltables/
-
-; directory that holds the manuscript files
-DOC_DIR=doc/
-
-; the latex manuscript
-DOC_IN_FILE=bmc_article.tex
-
-; the resulting output file
-DOC_OUT_FILE=bmc_article.dvi
-
-; Main configuration file for the PhyLoTA Browser scripts to build the database
-; Options are key - value pairs with '=' as the delimiter
-; Anything following a ';' is ignored as a comment.
-
-; Configuration for the all against all blast
-BLAST_DIR=/usr/local/ncbi/blast-2.2.24/
 
 ; Configuration settings for interaction with the mysql database for phylota
 ; browser
@@ -73,14 +47,6 @@ USER=sanderm
 PASS=phylota
 DATABASE=phylota
 RDBMS=mysql
-
-; Variables of a concatenated dump file to read into the database
-DUMP_IN_FILE=data/pb.bu.rel184.4.10.2012.gz
-DUMP_IN_CHUNKS=pb.bu.rel184.4.10.2012.parta{a,b,c,d,e}
-DUMP_IN_URL=http://phylota.net/pb/Download/184/
-
-; Name for a dump file to write out of the database
-DUMP_OUT_FILE=data/pb.bu.rel184
 
 ; Configuration for setting up the database and parsing the sequences.
 ; If variables whose names end with DIR or FILE point to relative paths, and
