changed location of INPARANOID_SEQ_FILE to conform to where puppet puts it

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -8,9 +8,8 @@ VERBOSITY=-v
 ; we should do this as follows:
 ; - by default all binaries are assumed to be on the PATH
 ; - we don't hardcode binary locations in this config file under git
-; - all binaries should be called SUPERSMART_<name>_BIN
+; - all binaries should be called <name>_BIN
 ; - the test suite can then verify whether they are found
-; - we also need to put muscle and blast in the list of binaries
 EXAML_BIN=examl
 PARSER_BIN=parser
 BLASTALL_BIN=blastall
@@ -38,7 +37,7 @@ EXAML_ARGS=-S -D -m GAMMA
 TREEPL_SMOOTH=100
 
 ; inparanoid processed sequences
-INPARANOID_SEQ_FILE=data/INPARANOID/inparanoid.fa
+INPARANOID_SEQ_FILE=/usr/share/supersmart/inparanoid.fa
 
 ; Configuration settings for interaction with the mysql database for phylota
 ; browser
