changed PHYLOTA_HOME to SUPERSMART_HOME

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -49,7 +49,7 @@ RDBMS=mysql
 
 ; Configuration for setting up the database and parsing the sequences.
 ; If variables whose names end with DIR or FILE point to relative paths, and
-; prefixing them with the value of environment variable $PHYLOTA_HOME turns
+; prefixing them with the value of environment variable $SUPERSMART_HOME turns
 ; these into absolute paths that point to something (which is the intended
 ; behaviour), then the Config.pm object that operates on this file will return
 ; those absolute paths instead. This is because some of the steps are done on a
