changed DB username to mysql; removed mysql password

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -39,11 +39,10 @@ TREEPL_SMOOTH=100
 ; inparanoid processed sequences
 INPARANOID_SEQ_FILE=/usr/share/supersmart/inparanoid.fa
 
-; Configuration settings for interaction with the mysql database for phylota
-; browser
+; Configuration settings for interaction with the mysql database in the 
+;supersmart pipeline
 HOST=localhost
-USER=sanderm
-PASS=phylota
+USER=mysql
 DATABASE=phylota
 RDBMS=mysql
 
