can now use very many alignment programs

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -46,6 +46,11 @@ USER=mysql
 DATABASE=phylota
 RDBMS=mysql
 
+; defines the preferred multiple sequence alignment tool. note that this is
+; a short name, not an executable location. possible values are:
+; mafft clustalw kalign muscle probalign probcons tcoffee amap 
+MSA_TOOL=muscle
+ 
 ; Configuration for setting up the database and parsing the sequences.
 ; If variables whose names end with DIR or FILE point to relative paths, and
 ; prefixing them with the value of environment variable $SUPERSMART_HOME turns
