changed variables for BLASTALL_BIN and FORMATDB_BIN because they have new names in ncbi-blast+

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -12,8 +12,8 @@ VERBOSITY=-v
 ; - the test suite can then verify whether they are found
 EXAML_BIN=examl
 PARSER_BIN=parser
-BLASTALL_BIN=blastall
-FORMATDB_BIN=formatdb
+BLASTP_BIN=blastp
+MAKEBLASTDB_BIN=makeblastdb
 MPIRUN_BIN=mpirun
 MYSQL_BIN=mysql
 PERL_BIN=perl
