also need location for blastn

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -13,6 +13,7 @@ VERBOSITY=-v
 EXAML_BIN=examl
 PARSER_BIN=parser
 BLASTP_BIN=blastp
+BLASTN_BIN=blastn
 MAKEBLASTDB_BIN=makeblastdb
 MPIRUN_BIN=mpirun
 MYSQL_BIN=mysql
