adding config variables for merging

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -51,8 +51,15 @@ RDBMS=mysql
 ; defines the preferred multiple sequence alignment tool. note that this is
 ; a short name, not an executable location. possible values are:
 ; mafft clustalw kalign muscle probalign probcons tcoffee amap 
-MSA_TOOL=muscle
- 
+MSA_TOOL=mafft
+
+; blast inparanoid feature
+ALN_MERGE=blast
+
+BACKBONE_MAX_DISTANCE=0.1
+BACKBONE_MIN_COVERAGE=0.3
+CLADE_MAX_DISTANCE=0.1
+
 ; Configuration for setting up the database and parsing the sequences.
 ; If variables whose names end with DIR or FILE point to relative paths, and
 ; prefixing them with the value of environment variable $SUPERSMART_HOME turns
