MERGE_OVERLAP specifies how much of the target and query sequences must be covered by HSPs when BLASTing. BACKBONE_MIN_COVERAGE specifies the minimum number of times that a taxon must occur in an alignment

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -55,9 +55,9 @@ MSA_TOOL=mafft
 
 ; blast inparanoid feature
 ALN_MERGE=blast
-
+MERGE_OVERLAP=0.51
 BACKBONE_MAX_DISTANCE=0.1
-BACKBONE_MIN_COVERAGE=0.3
+BACKBONE_MIN_COVERAGE=2
 CLADE_MAX_DISTANCE=0.1
 
 ; Configuration for setting up the database and parsing the sequences.
