BACKBONE_MIN_COVERAGE=1 seems to work well enough

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -32,8 +32,8 @@ NODES=4
 ; approximate size of supersmart chunks
 CHUNKSIZE=10
 
-; additional RAxML command line arguments
-EXAML_ARGS=-S -D -m GAMMA
+; substitution model for ExaML
+EXAML_MODEL=GAMMA
 
 ; treePL smoothing level
 TREEPL_SMOOTH=100
@@ -42,7 +42,7 @@ TREEPL_SMOOTH=100
 INPARANOID_SEQ_FILE=/usr/share/supersmart/inparanoid.fa
 
 ; Configuration settings for interaction with the mysql database in the 
-;supersmart pipeline
+; supersmart pipeline
 HOST=localhost
 USER=mysql
 DATABASE=phylota
@@ -53,11 +53,18 @@ RDBMS=mysql
 ; mafft clustalw kalign muscle probalign probcons tcoffee amap 
 MSA_TOOL=mafft
 
-; blast inparanoid feature
+; parameters for merging clusters. In principle we could use 'blast', 'inparanoid'
+; or 'feature'. When blasting, we retain superclusters whose reciprocal overlap is
+; specified as MERGE_OVERLAP. We will only retain alignments whose divergence does
+; not exceed BACKBONE_MAX_DISTANCE (to prevent saturation) and we will join alignments
+; such that each exemplar species participates in at least BACKBONE_MIN_COVERAGE
+; alignments.
 ALN_MERGE=blast
 MERGE_OVERLAP=0.51
 BACKBONE_MAX_DISTANCE=0.1
-BACKBONE_MIN_COVERAGE=3
+BACKBONE_MIN_COVERAGE=1
+
+; parameters for genus trees
 CLADE_MAX_DISTANCE=0.1
 
 ; Configuration for setting up the database and parsing the sequences.
