--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -75,3 +75,7 @@ CLADE_MAX_DISTANCE=0.1
 ; text file containing the GB release number on which this build is based
 GB_RELNUM_FILE=data/GB_CURRENT_RELEASE/GB_FLATFILES/GB_Release_Number
 GB_RELNUM=
+
+; defines the minimum 'best practice score' for fossil records from the fossil
+; table to be used as calibration points in the tree calibration
+FOSSIL_BEST_PRACTICE_CUTOFF=0.0
