adding variables for selecting genus level alignment sets

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -61,8 +61,12 @@ MERGE_OVERLAP=0.51
 BACKBONE_MAX_DISTANCE=0.1
 BACKBONE_MIN_COVERAGE=1
 
-; parameters for genus trees
-CLADE_MAX_DISTANCE=0.1
+; parameters for genus trees. within the genera we might accept more rapidly evolving
+; loci, hence the CLADE_MAX_DISTANCE might exceed BACKBONE_MAX_DISTANCE. This is
+; because we might assume less saturation. The CLADE_MIN_DENSITY specifies how
+; many of the clade members must minimally be present to accept the alignment
+CLADE_MAX_DISTANCE=0.2
+CLADE_MIN_DENSITY=0.7
 
 ; Configuration for setting up the database and parsing the sequences.
 ; If variables whose names end with DIR or FILE point to relative paths, and
