Added EXAML_ARGS variable

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -32,6 +32,9 @@ NODES=4
 ; substitution model for ExaML
 EXAML_MODEL=GAMMA
 
+; extra aruments for ExaML
+EXAML_ARGS=
+
 ; treePL smoothing level
 TREEPL_SMOOTH=100
 
