added config variables for burnin and for location of treeannotator

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -25,6 +25,7 @@ MUSCLE_BIN=muscle
 CONSENSE_BIN=consense
 TREEPL_BIN=treePL
 BEAST_BIN=beast
+TREEANNOTATOR_BIN=treeannotator
 
 ; number of MPI nodes
 NODES=4
@@ -37,6 +38,9 @@ EXAML_ARGS=
 
 ; treePL smoothing level
 TREEPL_SMOOTH=100
+
+; burnin fraction for computing consensus trees
+BURNIN=0.1
 
 ; inparanoid processed sequences
 INPARANOID_SEQ_FILE=/usr/share/supersmart/inparanoid.fa
