added option to select lowest taxon rank that will be considered for analysis, defaults to 'species'

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -11,6 +11,7 @@ VERBOSITY=-v
 ; - all binaries should be called <name>_BIN
 ; - the test suite can then verify whether they are found
 EXAML_BIN=examl
+EXABAYES_BIN=yggdrasil
 PARSER_BIN=parser
 BLASTP_BIN=blastp
 BLASTN_BIN=blastn
@@ -90,3 +91,8 @@ GB_RELNUM=
 ; defines the minimum 'best practice score' for fossil records from the fossil
 ; table to be used as calibration points in the tree calibration
 FOSSIL_BEST_PRACTICE_CUTOFF=0.0
+
+; defines the taxonomic rank until which given input taxa will 
+; be expanded. It is thus defined at which taxonomic rank a taxon
+; will be considered a leaf in the tree
+LOWEST_TAXON_RANK=species
