changed variable name from LOWEST_TAXON_RANK to ROOT_TAXA_EXPANSION

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -3,7 +3,7 @@
 ; SPECIFIC LOCATIONS, AND ALSO *NOT* THINGS RELATED TO INSTALLATION.
 
 ; overall verbosity level
-VERBOSITY=-v
+VERBOSITY=-v -v
 
 ; we should do this as follows:
 ; - by default all binaries are assumed to be on the PATH
@@ -92,7 +92,8 @@ GB_RELNUM=
 ; table to be used as calibration points in the tree calibration
 FOSSIL_BEST_PRACTICE_CUTOFF=0.0
 
-; defines the taxonomic rank until which given input taxa will 
+; defines the taxonomic rank until which the input taxa will 
 ; be expanded. It is thus defined at which taxonomic rank a taxon
-; will be considered a leaf in the tree
-LOWEST_TAXON_RANK=species
+; will be considered a leaf in the tree. If not set, input taxa
+; will not be expanded
+ROOT_TAXA_EXPANSION=Species
