set min backbone coverage to 3, disabled root taxa expansion (so the primate example will run faster)

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -3,7 +3,7 @@
 ; SPECIFIC LOCATIONS, AND ALSO *NOT* THINGS RELATED TO INSTALLATION.
 
 ; overall verbosity level
-VERBOSITY=-v -v
+VERBOSITY=-v 
 
 ; we should do this as follows:
 ; - by default all binaries are assumed to be on the PATH
@@ -56,7 +56,7 @@ RDBMS=mysql
 ; defines the preferred multiple sequence alignment tool. note that this is
 ; a short name, not an executable location. possible values are:
 ; mafft clustalw kalign muscle probalign probcons tcoffee amap 
-MSA_TOOL=mafft
+MSA_TOOL=muscle
 
 ; parameters for merging clusters. In principle we could use 'blast', 'inparanoid'
 ; or 'feature'. When blasting, we retain superclusters whose reciprocal overlap is
@@ -67,14 +67,14 @@ MSA_TOOL=mafft
 ALN_MERGE=blast
 MERGE_OVERLAP=0.51
 BACKBONE_MAX_DISTANCE=0.1
-BACKBONE_MIN_COVERAGE=1
+BACKBONE_MIN_COVERAGE=3
 
 ; parameters for genus trees. within the genera we might accept more rapidly evolving
 ; loci, hence the CLADE_MAX_DISTANCE might exceed BACKBONE_MAX_DISTANCE. This is
 ; because we might assume less saturation. The CLADE_MIN_DENSITY specifies how
 ; many of the clade members must minimally be present to accept the alignment
 CLADE_MAX_DISTANCE=0.2
-CLADE_MIN_DENSITY=0.7
+CLADE_MIN_DENSITY=0.5
 
 ; Configuration for setting up the database and parsing the sequences.
 ; If variables whose names end with DIR or FILE point to relative paths, and
@@ -96,4 +96,4 @@ FOSSIL_BEST_PRACTICE_CUTOFF=0.0
 ; be expanded. It is thus defined at which taxonomic rank a taxon
 ; will be considered a leaf in the tree. If not set, input taxa
 ; will not be expanded
-ROOT_TAXA_EXPANSION=Species
+ROOT_TAXA_EXPANSION=
