added variable BACKBONE_INFERENCE_TOOL which can be either examl or exabayes

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -11,7 +11,7 @@ VERBOSITY=-v
 ; - all binaries should be called <name>_BIN
 ; - the test suite can then verify whether they are found
 EXAML_BIN=examl
-EXABAYES_BIN=yggdrasil
+EXABAYES_BIN=exabayes
 PARSER_BIN=parser
 BLASTP_BIN=blastp
 BLASTN_BIN=blastn
@@ -57,6 +57,10 @@ RDBMS=mysql
 ; a short name, not an executable location. possible values are:
 ; mafft clustalw kalign muscle probalign probcons tcoffee amap 
 MSA_TOOL=muscle
+
+; defined the tool used for backbone inference. possible values 
+; are examl and exabayes
+BACKBONE_INFERENCE_TOOL=exabayes
 
 ; parameters for merging clusters. In principle we could use 'blast', 'inparanoid'
 ; or 'feature'. When blasting, we retain superclusters whose reciprocal overlap is
