--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -12,7 +12,8 @@ VERBOSITY=-v
 ; - the test suite can then verify whether they are found
 EXAML_BIN=examl
 EXABAYES_BIN=exabayes
-PARSER_BIN=parser
+EXAML_PARSER_BIN=/usr/local/src/ExaML/parser/parser
+EXABAYES_PARSER_BIN=/usr/local/src/exabayes-1.2.1/bin/parser
 BLASTP_BIN=blastp
 BLASTN_BIN=blastn
 MAKEBLASTDB_BIN=makeblastdb
@@ -60,7 +61,7 @@ MSA_TOOL=muscle
 
 ; defined the tool used for backbone inference. possible values 
 ; are examl and exabayes
-BACKBONE_INFERENCE_TOOL=exabayes
+BACKBONE_INFERENCE_TOOL=examl
 
 ; parameters for merging clusters. In principle we could use 'blast', 'inparanoid'
 ; or 'feature'. When blasting, we retain superclusters whose reciprocal overlap is
