now distinguishing between phylip and exabayes consense binaries

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -24,7 +24,8 @@ CURL_BIN=curl
 WGET_BIN=wget
 GUNZIP_BIN=gunzip
 MUSCLE_BIN=muscle
-CONSENSE_BIN=consense
+PHYLIP_CONSENSE_BIN=/usr/local/src/phylip-3.695/src/consense
+EXABAYES_CONSENSE_BIN=/usr/local/src/exabayes-1.2.1/bin/consense
 TREEPL_BIN=treePL
 BEAST_BIN=beast
 TREEANNOTATOR_BIN=treeannotator
