--- a/conf/Vagrantfile
+++ b/conf/Vagrantfile
@@ -1,6 +1,6 @@
 VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-    config.vm.box_url = "https://www.dropbox.com/s/i4e4pgylw5e8g0q/ubuntu-x86.box"
+    config.vm.box_url = "https://dl.dropboxusercontent.com/s/i4e4pgylw5e8g0q/ubuntu-x86.box"
     config.vm.box = "supersmart-ubuntu"
     config.vm.host_name = "supersmart"
     config.vm.provision "puppet"
