changing default MSA tool to mafft

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -58,7 +58,7 @@ RDBMS=mysql
 ; defines the preferred multiple sequence alignment tool. note that this is
 ; a short name, not an executable location. possible values are:
 ; mafft clustalw kalign muscle probalign probcons tcoffee amap 
-MSA_TOOL=muscle
+MSA_TOOL=mafft
 
 ; defined the tool used for backbone inference. possible values 
 ; are examl and exabayes
