--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -24,7 +24,7 @@ CURL_BIN=curl
 WGET_BIN=wget
 GUNZIP_BIN=gunzip
 MUSCLE_BIN=muscle
-PHYLIP_CONSENSE_BIN=/usr/local/src/phylip-3.695/src/consense
+PHYLIP_CONSENSE_BIN=/usr/local/src/phylip-3.695/exe/consense
 EXABAYES_CONSENSE_BIN=/usr/local/src/exabayes-1.2.1/bin/consense
 TREEPL_BIN=treePL
 BEAST_BIN=beast
