decreased overall verbosity level for demonstration purposes

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -3,7 +3,7 @@
 ; SPECIFIC LOCATIONS, AND ALSO *NOT* THINGS RELATED TO INSTALLATION.
 
 ; overall verbosity level
-VERBOSITY=-v 
+VERBOSITY=
 
 ; we should do this as follows:
 ; - by default all binaries are assumed to be on the PATH
