--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -3,7 +3,7 @@
 ; SPECIFIC LOCATIONS, AND ALSO *NOT* THINGS RELATED TO INSTALLATION.
 
 ; overall verbosity level
-VERBOSITY=
+VERBOSITY=-v
 
 ; we should do this as follows:
 ; - by default all binaries are assumed to be on the PATH
@@ -96,9 +96,3 @@ GB_RELNUM=
 ; defines the minimum 'best practice score' for fossil records from the fossil
 ; table to be used as calibration points in the tree calibration
 FOSSIL_BEST_PRACTICE_CUTOFF=0.0
-
-; defines the taxonomic rank until which the input taxa will 
-; be expanded. It is thus defined at which taxonomic rank a taxon
-; will be considered a leaf in the tree. If not set, input taxa
-; will not be expanded
-ROOT_TAXA_EXPANSION=
