Setting new configuration of inparanoid file using $HOME environment variable, automatically dereferencing it when loading. This makes test 'config.t' run. @rvosa : Do you think we will use inparanoid in the future or could we remove it from SUPERSMART completely?

--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -45,7 +45,7 @@ TREEPL_SMOOTH=100
 BURNIN=0.1
 
 ; inparanoid processed sequences
-INPARANOID_SEQ_FILE=/usr/share/supersmart/inparanoid.fa
+INPARANOID_SEQ_FILE=${HOME}/SUPERSMART/data/inparanoid.fa
 
 ; Configuration settings for interaction with the mysql database in the 
 ; supersmart pipeline
@@ -60,7 +60,7 @@ RDBMS=mysql
 MSA_TOOL=mafft
 
 ; defined the tool used for backbone inference. possible values 
-; are examl and exabayes
+; are raxml, examl and exabayes
 BACKBONE_INFERENCE_TOOL=examl
 
 ; parameters for merging clusters. In principle we could use 'blast', 'inparanoid'
