runs now with new ubuntu machine. back to provisioning, after all

--- a/conf/Vagrantfile
+++ b/conf/Vagrantfile
@@ -1,4 +1,7 @@
 VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-  config.vm.box = "supersmart/ubuntu"
+  config.vm.box_url = "https://oss-binaries.phusionpassenger.com/vagrant/boxes/latest/ubuntu-14.04-amd64-vbox.box"
+  config.vm.box = "supersmart"
+  config.vm.hostname = "supersmart"
+  config.vm.provision "puppet"
 end
