Adding release number, can be retrieved with 'smrt version' and will be printed right after subcommand is invoked. This adresses issue #33.

--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -2,6 +2,9 @@
 ; FOR ALL *RUNS* OF THE PIPELINE. SO: *NOT* VARIABLE THINGS, LIKE PROJECT-
 ; SPECIFIC LOCATIONS, AND ALSO *NOT* THINGS RELATED TO INSTALLATION.
 
+; current release version
+RELEASE=0.0.1
+
 ; overall verbosity level
 VERBOSITY=-v
 
