--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -1,70 +1,35 @@
-; XXX THIS FILE SHOULD CONTAIN VARIABLES THAT ARE NEEDED AS CONSTANTS 
-; FOR ALL *RUNS* OF THE PIPELINE. SO: *NOT* VARIABLE THINGS, LIKE PROJECT-
-; SPECIFIC LOCATIONS, AND ALSO *NOT* THINGS RELATED TO INSTALLATION.
+; THIS FILE CONTAINS EXTENDED CONFIGURABLE OPTIONS FOR THE SUPERSMART PIPELINE
+; WHICH CANNOT BE SET VIA THE COMMAND-LINE INTERFACE FOR THE INDIVIDUAL PIPELINE STEPS
 
-; current release version
-RELEASE=0.1.0
+
+; 1 . GENERAL OPTIONS
+
+; number of cores available
+NODES=4
 
 ; overall verbosity level
 VERBOSITY=-v
 
-; we should do this as follows:
-; - by default all binaries are assumed to be on the PATH
-; - all binaries should be called <name>_BIN
-; - the test suite can then verify whether they are found
-EXAML_BIN=examl
-EXABAYES_BIN=exabayes
-EXAML_PARSER_BIN=parse-examl
-EXABAYES_PARSER_BIN=parse-exabayes
-BLASTP_BIN=blastp
-BLASTN_BIN=blastn
-MAKEBLASTDB_BIN=makeblastdb
-MPIRUN_BIN=mpirun
-MYSQL_BIN=mysql
-PERL_BIN=perl
-CURL_BIN=curl
-WGET_BIN=wget
-GUNZIP_BIN=gunzip
-MUSCLE_BIN=muscle
-PHYLIP_CONSENSE_BIN=consense-phylip
-EXABAYES_CONSENSE_BIN=consense-exabayes
-TREEPL_BIN=treePL
-BEAST_BIN=beast
-TREEANNOTATOR_BIN=treeannotator
+; random seed (for reproducibility of results)
+RANDOM_SEED=1234
 
-; number of MPI nodes
-NODES=4
+; 2. PIPELINE RUN OPTIONS
+; (such as choice of analysis tools, extended run parameters etc.)
 
-; substitution model for ExaML
+; substitution models for inference tools
 EXAML_MODEL=GAMMA
+RAXML_MODEL=GTRGAMMA
 
-; extra aruments for ExaML
-EXAML_ARGS=
-
-; treePL smoothing level
-TREEPL_SMOOTH=100
-
-; burnin fraction for computing consensus trees
-BURNIN=0.1
-
-; inparanoid processed sequences
-INPARANOID_SEQ_FILE=${HOME}/SUPERSMART/data/inparanoid.fa
-
-; Configuration settings for interaction with the mysql database in the 
-; supersmart pipeline
-HOST=localhost
-USER=mysql
-DATABASE=phylota
-RDBMS=mysql
+; number of RAXML runs and bootstraps
+RAXML_RUNS=500
 
 ; defines the preferred multiple sequence alignment tool. note that this is
 ; a short name, not an executable location. possible values are:
 ; mafft clustalw kalign muscle probalign probcons tcoffee amap 
 MSA_TOOL=mafft
 
-; defined the tool used for backbone inference. possible values 
-; are raxml, examl and exabayes
-BACKBONE_INFERENCE_TOOL=examl
+; treePL smoothing level
+TREEPL_SMOOTH=100
 
 ; parameters for merging clusters. In principle we could use 'blast', 'inparanoid'
 ; or 'feature'. When blasting, we retain superclusters whose reciprocal overlap is
@@ -99,3 +64,41 @@ GB_RELNUM=
 ; defines the minimum 'best practice score' for fossil records from the fossil
 ; table to be used as calibration points in the tree calibration
 FOSSIL_BEST_PRACTICE_CUTOFF=0.0
+
+; burnin fraction for computing consensus trees
+; from a posterior distribution
+BURNIN=0.1
+
+; 3. INSTALLATION OPTIONS 
+; (Most likely, you won't need to change anything here.)
+; current release version
+
+RELEASE=0.1.0
+
+; names of executables used by the pipeline
+EXAML_BIN=examl
+EXABAYES_BIN=exabayes
+EXAML_PARSER_BIN=parse-examl
+EXABAYES_PARSER_BIN=parse-exabayes
+BLASTP_BIN=blastp
+BLASTN_BIN=blastn
+MAKEBLASTDB_BIN=makeblastdb
+MPIRUN_BIN=mpirun
+MYSQL_BIN=mysql
+PERL_BIN=perl
+CURL_BIN=curl
+WGET_BIN=wget
+GUNZIP_BIN=gunzip
+MUSCLE_BIN=muscle
+PHYLIP_CONSENSE_BIN=consense-phylip
+EXABAYES_CONSENSE_BIN=consense-exabayes
+TREEPL_BIN=treePL
+BEAST_BIN=beast
+TREEANNOTATOR_BIN=treeannotator
+
+; Configuration settings for interaction with the mysql database in the 
+; supersmart pipeline
+HOST=localhost
+USER=mysql
+DATABASE=phylota
+RDBMS=mysql
