changed db user to root and standard raxml iterations to 100

--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -21,7 +21,7 @@ EXAML_MODEL=GAMMA
 RAXML_MODEL=GTRGAMMA
 
 ; number of RAXML runs and bootstraps
-RAXML_RUNS=500
+RAXML_RUNS=100
 
 ; defines the preferred multiple sequence alignment tool. note that this is
 ; a short name, not an executable location. possible values are:
@@ -99,6 +99,6 @@ TREEANNOTATOR_BIN=treeannotator
 ; Configuration settings for interaction with the mysql database in the 
 ; supersmart pipeline
 HOST=localhost
-USER=mysql
-DATABASE=phylota
+USER=root
+DATABASE=phylota_sim
 RDBMS=mysql
