--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -100,5 +100,5 @@ TREEANNOTATOR_BIN=treeannotator
 ; supersmart pipeline
 HOST=localhost
 USER=root
-DATABASE=phylota_sim
+DATABASE=phylota
 RDBMS=mysql
