--- a/conf/Vagrantfile
+++ b/conf/Vagrantfile
@@ -1,11 +1,4 @@
 VAGRANTFILE_API_VERSION = "2"
-Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
- 	config.vm.box_url = "https://vagrantcloud.com/ubuntu/boxes/trusty32"
- 	config.vm.box = "ubuntu/trusty32"
- 	config.vm.hostname = "supersmart-VM"
- 	config.vm.provision "puppet"
-
-	config.vm.provider :virtualbox do |vb|
-    	vb.customize ["modifyvm", :id, "--cpus", "4"]   
-  	end  
+        Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
+        config.vm.box = "supersmart/ubuntu"
 end
