added EXABAYES configuration options

--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -23,6 +23,11 @@ RAXML_MODEL=GTRGAMMA
 ; number of RAXML runs and bootstraps
 RAXML_RUNS=100
 
+; ExaBayes (backbone tool) options
+EXABAYES_NUMRUNS=2
+EXABAYES_NUMCHAINS=2
+EXABAYES_NUMGENS=1000000
+
 ; defines the preferred multiple sequence alignment tool. note that this is
 ; a short name, not an executable location. possible values are:
 ; mafft clustalw kalign muscle probalign probcons tcoffee amap 
