--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ perl:
   - "5.12"
   - "5.10"
   - "5.8"
+install:
+  - "git clone https://github.com/bioperl/bioperl-live.git; export PERL5LIB=$( pwd )/bioperl-live:$PERL5LIB"
+  - "git clone https://github.com/bioperl/bioperl-run.git; export PERL5LIB=$( pwd )/bioperl-run/lib:$PERL5LIB"
