--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,15 @@ perl:
   - "5.10"
   - "5.8"
 install:
-  - "cpanm DBIx::Class | tail -n 1"
-  - "cpanm Template | tail -n 1"
-  - "cpanm Config::Tiny | tail -n 1"
-  - "cpanm DBI | tail -n 1"
-  - "cpanm DBD::mysql | tail -n 1"
-  - "cpanm Moose | tail -n 1"
-  - "cpanm XML::Twig | tail -n 1"
-  - "cpanm HTML::Parser | tail -n 1"
-  - "cpanm JSON | tail -n 1"
-  - "cpanm Bio::Phylo | tail -n 1"
+  - "cpanm --notest DBIx::Class | tail -n 1"
+  - "cpanm --notest Template | tail -n 1"
+  - "cpanm --notest Config::Tiny | tail -n 1"
+  - "cpanm --notest DBI | tail -n 1"
+  - "cpanm --notest DBD::mysql | tail -n 1"
+  - "cpanm --notest Moose | tail -n 1"
+  - "cpanm --notest XML::Twig | tail -n 1"
+  - "cpanm --notest HTML::Parser | tail -n 1"
+  - "cpanm --notest JSON | tail -n 1"
+  - "cpanm --notest Bio::Phylo | tail -n 1"
   - "git clone https://github.com/bioperl/bioperl-live.git; export PERL5LIB=$( pwd )/bioperl-live:$PERL5LIB"
   - "git clone https://github.com/bioperl/bioperl-run.git; export PERL5LIB=$( pwd )/bioperl-run/lib:$PERL5LIB"
