switching back to CPAN bioperl

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,7 @@ install:
   - "cpanm --notest HTML::Parser | tail -n 1"
   - "cpanm --notest JSON | tail -n 1"
   - "cpanm --notest Bio::Phylo | tail -n 1"
-  - "git clone https://github.com/bioperl/bioperl-live.git; export PERL5LIB=$( pwd )/bioperl-live:$PERL5LIB"
-  - "git clone https://github.com/bioperl/bioperl-run.git; export PERL5LIB=$( pwd )/bioperl-run/lib:$PERL5LIB"
+  - "cpanm --force --notest BioPerl | tail -n 1"
+  - "cpanm --force --notest BioPerl-Run | tail -n 1"
+  #- "git clone https://github.com/bioperl/bioperl-live.git; export PERL5LIB=$( pwd )/bioperl-live:$PERL5LIB"
+  #- "git clone https://github.com/bioperl/bioperl-run.git; export PERL5LIB=$( pwd )/bioperl-run/lib:$PERL5LIB"
