--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
   - "cpanm --notest HTML::Parser | tail -n 1"
   - "cpanm --notest JSON | tail -n 1"
   - "cpanm --notest Bio::Phylo | tail -n 1"
+  - "cpanm --notest Math::Random | tail -n 1"
   - "git clone https://github.com/bioperl/bioperl-live.git; export PERL5LIB=$( pwd )/bioperl-live:$PERL5LIB"
   - "git clone https://github.com/bioperl/bioperl-run.git; export PERL5LIB=$( pwd )/bioperl-run/lib:$PERL5LIB"
   - "git clone https://github.com/bioperl/Bio-Root.git; export PERL5LIB=$( pwd )/Bio-Root/lib:$PERL5LIB"
