--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ perl:
   - "5.10"
   - "5.8"
 install:
-  - "apt-get install puppet"
-  - "puppet apply conf/manifests/default.pp"
+  - "sudo apt-get install puppet"
+  - "sudo puppet apply conf/manifests/default.pp"
   - "cpanm --notest DBIx::Class | tail -n 1"
   - "cpanm --notest Template | tail -n 1"
   - "cpanm --notest Config::Tiny | tail -n 1"
