--- a/.travis.yml
+++ b/.travis.yml
@@ -15,17 +15,17 @@ install:
   - "sudo apt-get update"
   - "sudo apt-get install puppet"
   - "sudo puppet apply conf/manifests/default.pp"
-  - "cpanm --notest DBIx::Class | tail -n 1"
-  - "cpanm --notest Template | tail -n 1"
-  - "cpanm --notest Config::Tiny | tail -n 1"
-  - "cpanm --notest DBI | tail -n 1"
-  - "cpanm --notest DBD::mysql | tail -n 1"
-  - "cpanm --notest Moose | tail -n 1"
-  - "cpanm --notest XML::Twig | tail -n 1"
-  - "cpanm --notest HTML::Parser | tail -n 1"
-  - "cpanm --notest JSON | tail -n 1"
-  - "cpanm --notest Bio::Phylo | tail -n 1"
-  - "cpanm --notest Math::Random | tail -n 1"
-  - "git clone https://github.com/bioperl/bioperl-live.git; export PERL5LIB=$( pwd )/bioperl-live:$PERL5LIB"
-  - "git clone https://github.com/bioperl/bioperl-run.git; export PERL5LIB=$( pwd )/bioperl-run/lib:$PERL5LIB"
-  - "git clone https://github.com/bioperl/Bio-Root.git; export PERL5LIB=$( pwd )/Bio-Root/lib:$PERL5LIB"
+  #- "cpanm --notest DBIx::Class | tail -n 1"
+  #- "cpanm --notest Template | tail -n 1"
+  #- "cpanm --notest Config::Tiny | tail -n 1"
+  #- "cpanm --notest DBI | tail -n 1"
+  #- "cpanm --notest DBD::mysql | tail -n 1"
+  #- "cpanm --notest Moose | tail -n 1"
+  #- "cpanm --notest XML::Twig | tail -n 1"
+  #- "cpanm --notest HTML::Parser | tail -n 1"
+  #- "cpanm --notest JSON | tail -n 1"
+  #- "cpanm --notest Bio::Phylo | tail -n 1"
+  #- "cpanm --notest Math::Random | tail -n 1"
+  #- "git clone https://github.com/bioperl/bioperl-live.git; export PERL5LIB=$( pwd )/bioperl-live:$PERL5LIB"
+  #- "git clone https://github.com/bioperl/bioperl-run.git; export PERL5LIB=$( pwd )/bioperl-run/lib:$PERL5LIB"
+  #- "git clone https://github.com/bioperl/Bio-Root.git; export PERL5LIB=$( pwd )/Bio-Root/lib:$PERL5LIB"
