--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ perl:
   - "5.8"
 env:
   global:
-    - SUPERSMART_HOME=$TRAVIS_BUILD_DIR  
+    - SUPERSMART_HOME=$TRAVIS_BUILD_DIR
+    - PERL_CPANM_OPT="-l /home/travis/perl5/perlbrew/perls/$TRAVIS_PERL_VERSION"
 install:
   - "sudo useradd -d /home/vagrant -m vagrant"
   - "wget https://apt.puppetlabs.com/puppetlabs-release-trusty.deb"
