--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ perl:
 env:
   global:
     - SUPERSMART_HOME=$TRAVIS_BUILD_DIR
-    - PERL_CPANM_OPT="-l /home/travis/perl5/perlbrew/perls/$TRAVIS_PERL_VERSION"
+    - PERL_CPANM_OPT="-l /home/travis/perl5/perlbrew/perls/$TRAVIS_PERL_VERSION --no-sudo"
 install:
   - "sudo useradd -d /home/vagrant -m vagrant"
   - "wget https://apt.puppetlabs.com/puppetlabs-release-trusty.deb"
