--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,13 @@ perl:
 env:
   global:
     - SUPERSMART_HOME=$TRAVIS_BUILD_DIR
-    - FACTER_cpanm=`which cpanm`
 install:
   - "sudo useradd -d /home/vagrant -m vagrant"
   - "wget https://apt.puppetlabs.com/puppetlabs-release-trusty.deb"
   - "sudo dpkg -i puppetlabs-release-trusty.deb"
   - "sudo apt-get update"
   - "sudo apt-get install puppet"
-  - "sudo puppet apply --debug conf/manifests/default.pp"
+  - "export FACTER_cpanm=`which cpanm` && sudo puppet apply --debug conf/manifests/default.pp"
   #- "cpanm --notest DBIx::Class | tail -n 1"
   #- "cpanm --notest Template | tail -n 1"
   #- "cpanm --notest Config::Tiny | tail -n 1"
