--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,5 @@ install:
   - "cpanm --notest git://github.com/rvosa/bio-phylo.git"
   - "cpanm --notest git://github.com/bioperl/bioperl-live.git@v1.6.x"
   - "cpanm --notest git://github.com/bioperl/bioperl-run.git"
+  - "source /etc/profile.d/*.sh"
+  - "mysqld --console"
