--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ perl:
 env:
   global:
     - SUPERSMART_HOME=$TRAVIS_BUILD_DIR
+    - PATH="$PATH:/home/vagrant/SUPERSMART/tools/bin"
 install:
   - "sudo useradd -d /home/vagrant -m vagrant"
   - "wget https://apt.puppetlabs.com/puppetlabs-release-trusty.deb"
