added NODE_HEIGHTS config param [skip ci]

--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -74,6 +74,10 @@ FOSSIL_BEST_PRACTICE_CUTOFF=0.0
 ; from a posterior distribution
 BURNIN=0.1
 
+; how node heights are summarized in a consensus tree. Options are the same as
+; for TreeAnnotator, i.e. 'keep', 'median', 'mean' or 'ca'
+NODE_HEIGHTS=keep
+
 ; 3. INSTALLATION OPTIONS 
 ; (Most likely, you won't need to change anything here.)
 ; current release version
