--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - "wget https://apt.puppetlabs.com/puppetlabs-release-trusty.deb"
   - "sudo dpkg -i puppetlabs-release-trusty.deb"
   - "sudo apt-get update"
-  - "sudo apt-get install puppet"
+  - "sudo apt-get -y install puppet"
   - "sudo puppet apply conf/manifests/default.pp"
   - "cpanm --notest --installdeps ."
   - "cpanm --notest git://github.com/rvosa/bio-phylo.git"
