--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ perl:
 env:
   global:
     - SUPERSMART_HOME=$TRAVIS_BUILD_DIR
-    - PATH="$PATH:/home/vagrant/SUPERSMART/tools/bin:$TRAVIS_BUILD_DIR/packer_0.7.5_linux_amd64"
+    - PATH="$PATH:/home/vagrant/SUPERSMART/tools/bin:$TRAVIS_BUILD_DIR"
     - LD_LIBRARY_PATH=/usr/lib:/usr/lib64:/usr/local/lib
     - FACTER_ci=travis
     - secure: "Tm7RhsSRDR8MZjiLXksPwbWLp+uMR2cgW/Eoj2oV16D474SzsZmq9yRo9WvXLjXhx/jnbN1/HA1WPU321Puq2hpMG2Oz3hBVh7l9+tql34+LvWXnf5xkeitfA/wlG6NVEvCukb1a46aMpvt/Q4YXLq2LZnbwkOUpY7g6oSnHyCs"
