--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ after_success:
   - "sudo apt-get -y install unzip"
   - "wget https://dl.bintray.com/mitchellh/packer/packer_0.7.5_linux_amd64.zip"
   - "unzip packer_0.7.5_linux_amd64.zip"
-  - "packer push conf/template.json"
+  - "packer push -create conf/template.json"
