--- a/.travis.yml
+++ b/.travis.yml
@@ -12,20 +12,26 @@ env:
     - LD_LIBRARY_PATH=/usr/lib:/usr/lib64:/usr/local/lib
     - FACTER_ci=travis
     - secure: "oK5pYQ1iSLj0iZRtwLqHpYZBkY6/oIhdCsur+DXTWkdYlFC5KnQTIXZNdJ7dbv23+quvKoFT5w1p/0YE/lBFwiex7oby6l04pTC89Eo0WIYsfuZYAHD/mECSWc8VkoWhvatKTJGqq5fhDmwL90o6gf4b9H7uSQSng7WA5TLYGiY="
+    - secure: "TxXDWpqW85doO0T2qlzBosX8veO9EFfp4LI6cjH8Wl64P4kX6q8iH1PrMBWgCKQfmJujSmhLx3xq8YsESEYdm6/nzH4jA7/UKKM9MuUUM71SwBtTTpkpKcrxhUtW+z7ke7B69bAphZlXIwE+1vlrlZuiBNPE2r1PlnVTwz80Ngs="
 install:
-  - "sudo useradd -d /home/vagrant -m vagrant"
-  - "wget https://apt.puppetlabs.com/puppetlabs-release-trusty.deb"
-  - "sudo dpkg -i puppetlabs-release-trusty.deb"
-  - "sudo apt-get update"
-  - "sudo apt-get -y install puppet"
-  - "sudo -E puppet apply conf/manifests/default.pp"
-  - "cpanm --notest --installdeps ."
-  - "cpanm --notest git://github.com/rvosa/bio-phylo.git"
-  - "cpanm --notest git://github.com/bioperl/bioperl-live.git@v1.6.x"
-  - "cpanm --notest git://github.com/bioperl/bioperl-run.git"
-  - "source /etc/profile.d/*.sh"
+  - sudo useradd -d /home/vagrant -m vagrant
+  - wget https://apt.puppetlabs.com/puppetlabs-release-trusty.deb
+  - sudo dpkg -i puppetlabs-release-trusty.deb
+  - sudo apt-get update
+  - sudo apt-get -y install puppet
+  - sudo -E puppet apply conf/manifests/default.pp
+  - cpanm --notest --installdeps .
+  - cpanm --notest git://github.com/rvosa/bio-phylo.git
+  - cpanm --notest git://github.com/bioperl/bioperl-live.git@v1.6.x
+  - cpanm --notest git://github.com/bioperl/bioperl-run.git
+  - source /etc/profile.d/*.sh
 after_success:
-  - "sudo apt-get -y install unzip"
-  - "wget https://dl.bintray.com/mitchellh/packer/packer_0.7.5_linux_amd64.zip"
-  - "unzip packer_0.7.5_linux_amd64.zip"
-  - "packer push -create conf/template.json"
+  - cd conf && sh update_version.sh && cd -
+  - git config credential.helper "store --file=.git/credentials"
+  - echo "https://${GH_TOKEN}:@github.com" > .git/credentials
+  - git commit -m "incrementing version number [skip ci]" --all
+  - git push
+  - sudo apt-get -y install unzip
+  - wget https://dl.bintray.com/mitchellh/packer/packer_0.7.5_linux_amd64.zip
+  - unzip packer_0.7.5_linux_amd64.zip
+  - packer push -create conf/template.json
