--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ after_success:
   - git config --global push.default simple
   - git checkout master
   - git commit -m "incrementing version number [skip ci]" --all
+  - git remote set-url origin https://github.com/naturalis/supersmart.git
   - git push origin master
   - sudo apt-get -y install unzip
   - wget https://dl.bintray.com/mitchellh/packer/packer_0.7.5_linux_amd64.zip
