--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ install:
   - source /etc/profile.d/*.sh
 after_success:
   - cd conf && sh update_version.sh && cd -
-  - echo "https://${GH_TOKEN}:@github.com" > .git/credentials  
-  - git config credential.helper "store --file=.git/credentials"
+  - echo "https://${GH_TOKEN}:@github.com" > git_credentials  
+  - git config credential.helper "store --file=git_credentials"
   - git config --global user.email "rutgeraldo@gmail.com"
   - git config --global user.name "Rutger Vos"
   - git config --global push.default simple
@@ -39,4 +39,4 @@ after_success:
   - sudo apt-get -y install unzip
   - wget https://dl.bintray.com/mitchellh/packer/packer_0.7.5_linux_amd64.zip
   - unzip packer_0.7.5_linux_amd64.zip
-  - packer push -create conf/template.json
+  - ./packer push -create conf/template.json
