--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,10 @@ install:
   - source /etc/profile.d/*.sh
 after_success:
   - cd conf && sh update_version.sh && cd -
-  - echo "https://${GH_TOKEN}:@github.com" > git_credentials  
-  - git config credential.helper "store --file=git_credentials"
+  - echo "https://${GH_TOKEN}:@github.com" > $TRAVIS_BUILD_DIR/git_credentials  
+  - git config credential.helper "store --file=$TRAVIS_BUILD_DIR/git_credentials"
   - git config --global user.email "rutgeraldo@gmail.com"
-  - git config --global user.name "Rutger Vos"
+  - git config --global user.name "rvosa"
   - git config --global push.default simple
   - git checkout master
   - git commit -m "incrementing version number [skip ci]" --all
@@ -39,4 +39,4 @@ after_success:
   - sudo apt-get -y install unzip
   - wget https://dl.bintray.com/mitchellh/packer/packer_0.7.5_linux_amd64.zip
   - unzip packer_0.7.5_linux_amd64.zip
-  - ./packer push -create conf/template.json
+  - ./packer push -create $TRAVIS_BUILD_DIR/conf/template.json
