--- a/.travis.yml
+++ b/.travis.yml
@@ -26,18 +26,18 @@ install:
   - cpanm --notest git://github.com/bioperl/bioperl-run.git
   - source /etc/profile.d/*.sh
 after_success:
-  - cd conf && sh update_version.sh && cd -
-  - echo "https://${GH_TOKEN}:@github.com" > $TRAVIS_BUILD_DIR/git_credentials  
-  - git config credential.helper "store --file=$TRAVIS_BUILD_DIR/git_credentials"
-  - git config --global user.email "rutgeraldo@gmail.com"
-  - git config --global user.name "rvosa"
-  - git config --global push.default simple
-  - git fetch
-  - git checkout master
-  - git commit -m "incrementing version number [skip ci]" --all
-  - git remote set-url origin https://github.com/naturalis/supersmart.git
-  - git push origin master
-  - sudo apt-get -y install unzip
-  - wget https://dl.bintray.com/mitchellh/packer/packer_0.7.5_linux_amd64.zip
-  - unzip packer_0.7.5_linux_amd64.zip
-  - ./packer push -create $TRAVIS_BUILD_DIR/conf/template.json
+  #- cd conf && sh update_version.sh && cd -
+  #- echo "https://${GH_TOKEN}:@github.com" > $TRAVIS_BUILD_DIR/git_credentials  
+  #- git config credential.helper "store --file=$TRAVIS_BUILD_DIR/git_credentials"
+  #- git config --global user.email "rutgeraldo@gmail.com"
+  #- git config --global user.name "rvosa"
+  #- git config --global push.default simple
+  #- git fetch
+  #- git checkout master
+  #- git commit -m "incrementing version number [skip ci]" --all
+  #- git remote set-url origin https://github.com/naturalis/supersmart.git
+  #- git push origin master
+  #- sudo apt-get -y install unzip
+  #- wget https://dl.bintray.com/mitchellh/packer/packer_0.7.5_linux_amd64.zip
+  #- unzip packer_0.7.5_linux_amd64.zip
+  #- ./packer push -create $TRAVIS_BUILD_DIR/conf/template.json
