--- a/.travis.yml
+++ b/.travis.yml
@@ -11,20 +11,20 @@ env:
     - PATH="$PATH:/home/vagrant/SUPERSMART/tools/bin:$TRAVIS_BUILD_DIR"
     - LD_LIBRARY_PATH=/usr/lib:/usr/lib64:/usr/local/lib
     - FACTER_ci=travis
-    - secure: "oK5pYQ1iSLj0iZRtwLqHpYZBkY6/oIhdCsur+DXTWkdYlFC5KnQTIXZNdJ7dbv23+quvKoFT5w1p/0YE/lBFwiex7oby6l04pTC89Eo0WIYsfuZYAHD/mECSWc8VkoWhvatKTJGqq5fhDmwL90o6gf4b9H7uSQSng7WA5TLYGiY="
-    - secure: "TxXDWpqW85doO0T2qlzBosX8veO9EFfp4LI6cjH8Wl64P4kX6q8iH1PrMBWgCKQfmJujSmhLx3xq8YsESEYdm6/nzH4jA7/UKKM9MuUUM71SwBtTTpkpKcrxhUtW+z7ke7B69bAphZlXIwE+1vlrlZuiBNPE2r1PlnVTwz80Ngs="
+    #- secure: "oK5pYQ1iSLj0iZRtwLqHpYZBkY6/oIhdCsur+DXTWkdYlFC5KnQTIXZNdJ7dbv23+quvKoFT5w1p/0YE/lBFwiex7oby6l04pTC89Eo0WIYsfuZYAHD/mECSWc8VkoWhvatKTJGqq5fhDmwL90o6gf4b9H7uSQSng7WA5TLYGiY="
+    #- secure: "TxXDWpqW85doO0T2qlzBosX8veO9EFfp4LI6cjH8Wl64P4kX6q8iH1PrMBWgCKQfmJujSmhLx3xq8YsESEYdm6/nzH4jA7/UKKM9MuUUM71SwBtTTpkpKcrxhUtW+z7ke7B69bAphZlXIwE+1vlrlZuiBNPE2r1PlnVTwz80Ngs="
 install:
   - sudo useradd -d /home/vagrant -m vagrant
-  - wget https://apt.puppetlabs.com/puppetlabs-release-trusty.deb
-  - sudo dpkg -i puppetlabs-release-trusty.deb
-  - sudo apt-get update
+  #- wget https://apt.puppetlabs.com/puppetlabs-release-trusty.deb
+  #- sudo dpkg -i puppetlabs-release-trusty.deb
+  #- sudo apt-get update
   - sudo apt-get -y install puppet
   - sudo -E puppet apply conf/manifests/default.pp
   - cpanm --notest --installdeps .
   - cpanm --notest git://github.com/rvosa/bio-phylo.git
   - cpanm --notest git://github.com/bioperl/bioperl-live.git@v1.6.x
   - cpanm --notest git://github.com/bioperl/bioperl-run.git
-  - source /etc/profile.d/*.sh
+  #- source /etc/profile.d/*.sh
 after_success:
   #- cd conf && sh update_version.sh && cd -
   #- echo "https://${GH_TOKEN}:@github.com" > $TRAVIS_BUILD_DIR/git_credentials  
