--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - sudo useradd -d /home/vagrant -m vagrant
   #- wget https://apt.puppetlabs.com/puppetlabs-release-trusty.deb
   #- sudo dpkg -i puppetlabs-release-trusty.deb
-  #- sudo apt-get update
+  - sudo apt-get update
   - sudo apt-get -y install puppet
   - sudo -E puppet apply conf/manifests/default.pp
   - cpanm --notest --installdeps .
