--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -76,7 +76,7 @@ BURNIN=0.1
 
 ; how node heights are summarized in a consensus tree. Options are the same as
 ; for TreeAnnotator, i.e. 'keep', 'median', 'mean' or 'ca'
-NODE_HEIGHTS=keep
+NODE_HEIGHTS=ca
 
 ; 3. INSTALLATION OPTIONS 
 ; (Most likely, you won't need to change anything here.)
