adding variable BEAST_TEMPLATE_FILE [skip ci]

--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -28,6 +28,9 @@ EXABAYES_NUMRUNS=2
 EXABAYES_NUMCHAINS=2
 EXABAYES_NUMGENS=1000000
 
+; BEAST options
+BEAST_TEMPLATE_FILE=data/BEAST/starbeast.xml
+
 ; defines the preferred multiple sequence alignment tool. note that this is
 ; a short name, not an executable location. possible values are:
 ; mafft clustalw kalign muscle probalign probcons tcoffee amap 
