attempting to use travis_wait for downloading and unzipping phylota dump

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
     - PATH="$PATH:/home/vagrant/SUPERSMART/tools/bin:$TRAVIS_BUILD_DIR"
     - LD_LIBRARY_PATH=/usr/lib:/usr/lib64:/usr/local/lib
     - FACTER_ci=travis
+    - FACTER_travis_wait="travis_wait"
 install:
   - sudo useradd -d /home/vagrant -m vagrant
   - sudo apt-get update
