--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
   - sudo apt-get update
   - sudo apt-get -y install puppet
   - wget http://biovel.naturalis.nl/phylota.tar.gz
+  - md5sum phylota.tar.gz
   - tar -xzvf phylota.tar.gz 
   - travis_wait sudo -E puppet apply conf/manifests/default.pp
   - cpanm --notest --installdeps .
