--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,11 @@ env:
     - SUPERSMART_HOME=$TRAVIS_BUILD_DIR
     - PATH="$PATH:/home/vagrant/SUPERSMART/tools/bin:$TRAVIS_BUILD_DIR"
     - LD_LIBRARY_PATH=/usr/lib:/usr/lib64:/usr/local/lib
-    - FACTER_travis_wait="travis_wait"
-install:
+ainstall:
   - sudo useradd -d /home/vagrant -m vagrant
   - sudo apt-get update
   - sudo apt-get -y install puppet
-  - wget http://biovel.naturalis.nl/phylota.tar.gz
-  - tar -xzvf phylota.tar.gz 
-  - travis_wait sudo -E puppet apply conf/manifests/default.pp
+  - sudo -E puppet apply conf/manifests/default.pp
   - cpanm --notest --installdeps .
   - cpanm --notest git://github.com/rvosa/bio-phylo.git
   - cpanm --notest git://github.com/bioperl/bioperl-live.git@v1.6.x
