--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ env:
     - PATH="$PATH:/home/vagrant/SUPERSMART/tools/bin:$TRAVIS_BUILD_DIR"
     - LD_LIBRARY_PATH=/usr/lib:/usr/lib64:/usr/local/lib
   install: 
-    - "sudo useradd -d /home/vagrant -m vagrant"
-    - "sudo apt-get update"
-    - "sudo apt-get -y install puppet"
-    - "sudo -E puppet apply conf/manifests/default.pp"
-    - "cpanm --notest --installdeps ."
-    - "cpanm --notest git://github.com/rvosa/bio-phylo.git"
-    - "cpanm --notest git://github.com/bioperl/bioperl-live.git@v1.6.x"
-    - "cpanm --notest git://github.com/bioperl/bioperl-run.git"
+    - sudo useradd -d /home/vagrant -m vagrant
+    - sudo apt-get update
+    - sudo apt-get -y install puppet
+    - sudo -E puppet apply conf/manifests/default.pp
+    - cpanm --notest --installdeps .
+    - cpanm --notest git://github.com/rvosa/bio-phylo.git
+    - cpanm --notest git://github.com/bioperl/bioperl-live.git@v1.6.x
+    - cpanm --notest git://github.com/bioperl/bioperl-run.git
