--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
     - SUPERSMART_HOME=$TRAVIS_BUILD_DIR
     - PATH="$PATH:/home/vagrant/SUPERSMART/tools/bin:$TRAVIS_BUILD_DIR"
     - LD_LIBRARY_PATH=/usr/lib:/usr/lib64:/usr/local/lib
+    - FACTER_ci=travis
   install: 
     - sudo useradd -d /home/vagrant -m vagrant
     - sudo apt-get update
