--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
     - PATH="$PATH:/home/vagrant/SUPERSMART/tools/bin:$TRAVIS_BUILD_DIR"
     - LD_LIBRARY_PATH=/usr/lib:/usr/lib64:/usr/local/lib
     - FACTER_ci=travis
+    - TEST_VAR=test
   install:
     - sudo useradd -d /home/vagrant -m vagrant
     - sudo apt-get update
