--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ install:
   - sudo useradd -d /home/vagrant -m vagrant
   - sudo apt-get update
   - sudo apt-get -y install puppet
-  - sudo -E puppet apply conf/manifests/default.pp
+  - wget http://biovel.naturalis.nl/phylota.tar.gz
+  - tar -xzvf phylota.tar.gz
+  - travis_wait sudo -E puppet apply conf/manifests/default.pp
   - cpanm --notest --installdeps .
   - cpanm --notest git://github.com/rvosa/bio-phylo.git
   - cpanm --notest git://github.com/bioperl/bioperl-live.git@v1.6.x
