--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -34,7 +34,7 @@ BEAST_TEMPLATE_FILE=data/BEAST/starbeast.xml
 ; defines the preferred multiple sequence alignment tool. note that this is
 ; a short name, not an executable location. possible values are:
 ; mafft clustalw kalign muscle probalign probcons tcoffee amap 
-MSA_TOOL=mafft
+MSA_TOOL=muscle
 
 ; treePL smoothing level
 TREEPL_SMOOTH=100
@@ -56,6 +56,9 @@ BACKBONE_MIN_COVERAGE=3
 ; many of the clade members must minimally be present to accept the alignment
 CLADE_MAX_DISTANCE=0.2
 CLADE_MIN_DENSITY=0.5
+
+; maximum number of additional haplotypes to add to each species in a genus tree
+HAPLOTYPES_MAX=3
 
 ; Configuration for setting up the database and parsing the sequences.
 ; If variables whose names end with DIR or FILE point to relative paths, and
