--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - sudo useradd -d /home/vagrant -m vagrant
   - sudo apt-get update
   - sudo apt-get -y install puppet
-  - sudo -E puppet apply conf/manifests/default.pp
+  - travis_wait 60 sudo -E puppet apply conf/manifests/default.pp
   - cpanm --notest --installdeps .
   - cpanm --notest git://github.com/rvosa/bio-phylo.git
   - cpanm --notest git://github.com/bioperl/bioperl-live.git@v1.6.x
