--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -53,10 +53,11 @@ BACKBONE_MIN_COVERAGE=3
 ; parameters for genus trees. within the genera we might accept more rapidly evolving
 ; loci, hence the CLADE_MAX_DISTANCE might exceed BACKBONE_MAX_DISTANCE. This is
 ; because we might assume less saturation. The CLADE_MIN_DENSITY specifies how
-; many of the clade members must minimally be present to accept the alignment
+; many of the clade members must minimally be present to accept the alignment.
+; CLADE_MAX_MARKERS limits the number of markers that is included in the analysis.
 CLADE_MAX_DISTANCE=0.2
 CLADE_MIN_DENSITY=0.5
-
+CLADE_MAX_MARKERS=5
 ; maximum number of additional haplotypes to add to each species in a genus tree
 HAPLOTYPES_MAX=3
 
