100000 generations for exabayes is usually enough [skip ci]

--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -26,7 +26,7 @@ RAXML_RUNS=100
 ; ExaBayes (backbone tool) options
 EXABAYES_NUMRUNS=2
 EXABAYES_NUMCHAINS=2
-EXABAYES_NUMGENS=1000000
+EXABAYES_NUMGENS=100000
 
 ; BEAST options
 BEAST_TEMPLATE_FILE=data/BEAST/starbeast.xml
