--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -1,5 +1,5 @@
-; THIS FILE CONTAINS EXTENDED CONFIGURABLE OPTIONS FOR THE SUPERSMART PIPELINE
-; WHICH CANNOT BE SET VIA THE COMMAND-LINE INTERFACE FOR THE INDIVIDUAL PIPELINE STEPS
+; THIS FILE CONTAINS EXTENDED CONFIGURABLE OPTIONS FOR THE SUPERSMART PIPELINE THAT
+; CANNOT BE SET VIA THE COMMAND-LINE INTERFACE FOR THE INDIVIDUAL PIPELINE STEPS
 
 
 ; 1 . GENERAL OPTIONS
