switching to sqlite3

--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -114,5 +114,5 @@ TREEANNOTATOR_BIN=treeannotator
 ; supersmart pipeline
 HOST=localhost
 USER=root
-DATABASE=phylota
-RDBMS=mysql
+DATABASE=~/SUPERSMART/data/phylota.sqlite
+RDBMS=SQLite
