should be relative to SUPERSMART_HOME, not hardcoded
[skip ci]

--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -114,5 +114,5 @@ TREEANNOTATOR_BIN=treeannotator
 ; supersmart pipeline
 HOST=localhost
 USER=root
-DATABASE=~/SUPERSMART/data/phylota.sqlite
+DATABASE=data/phylota.sqlite
 RDBMS=SQLite
