variables with _FILE get expanded automatically [skip ci]

--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -112,7 +112,5 @@ TREEANNOTATOR_BIN=treeannotator
 
 ; Configuration settings for interaction with the mysql database in the 
 ; supersmart pipeline
-HOST=localhost
-USER=root
-DATABASE=data/phylota.sqlite
+DATABASE_FILE=data/phylota.sqlite
 RDBMS=SQLite
