--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,16 @@ perl:
   #- "5.8"
 env:
   global:
-    - SUPERSMART_HOME=$TRAVIS_BUILD_DIR
+    - SUPERSMART_HOME=/home/vagrant/supersmart/
     - PATH="$PATH:/home/vagrant/supersmart/tools/bin:$TRAVIS_BUILD_DIR"
     - LD_LIBRARY_PATH=/usr/lib:/usr/lib64:/usr/local/lib
     - FACTER_ci=travis
+    #- SUPERSMART_HOME=$TRAVIS_BUILD_DIR
 install:
   - sudo useradd -d /home/vagrant -m vagrant
   - sudo apt-get update
   - sudo apt-get -y install puppet
   - travis_wait 60 sudo -E puppet apply conf/manifests/default.pp
-  - ls /home/vagrant/supersmart/data
-  - pwd
   - cpanm --notest --installdeps .
   - cpanm --notest git://github.com/rvosa/bio-phylo.git
   - cpanm --notest git://github.com/bioperl/bioperl-live.git@v1.6.x
