--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ perl:
   #- "5.8"
 env:
   global:
-    - SUPERSMART_HOME=$TRAVIS_BUILD_DIR
+    - SUPERSMART_HOME=/home/vagrant/supersmart
+    #- SUPERSMART_HOME=$TRAVIS_BUILD_DIR
     - PATH="$PATH:/home/vagrant/supersmart/tools/bin:$TRAVIS_BUILD_DIR"
     - LD_LIBRARY_PATH=/usr/lib:/usr/lib64:/usr/local/lib
     - FACTER_ci=travis
@@ -15,8 +16,7 @@ install:
   - sudo useradd -d /home/vagrant -m vagrant
   - sudo apt-get update
   - sudo apt-get -y install puppet
-  #- travis_wait 60 sudo -E puppet apply conf/manifests/default.pp
-  - sudo -E puppet apply conf/manifests/default.pp
+  - travis_wait 60 sudo -E puppet apply conf/manifests/default.pp
   - echo $SUPERSMART_HOME
   - ls $SUPERSMART_HOME/data/phylota.sqlite && echo "dbfile present" || echo "dbfile not present"
   - ls /home/vagrant/supersmart/data/phylota.sqlite && echo "dbfile present" || echo "dbfile not present"
