--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -55,11 +55,13 @@ BACKBONE_MIN_COVERAGE=3
 ; because we might assume less saturation. The CLADE_MIN_DENSITY specifies how
 ; many of the clade members must minimally be present to accept the alignment.
 ; CLADE_MAX_MARKERS limits the number of markers that is included in the analysis.
+; CLADE_TAXON_MIN_MARKERS sets the minimum number of required markers for a taxon in the clade
 ; CLADE_MAX_HAPLOTYPES sets the maximum number of additional haplotypes to add to 
 ; each species in a genus tree
-CLADE_MAX_DISTANCE=0.2
-CLADE_MIN_DENSITY=0.5
-CLADE_MAX_MARKERS=5
+CLADE_MAX_DISTANCE=0.3
+CLADE_MIN_DENSITY=0.2
+CLADE_MAX_MARKERS=10
+CLADE_TAXON_MIN_MARKERS=2
 CLADE_MAX_HAPLOTYPES=3
 
 ; Configuration for setting up the database and parsing the sequences.
