added BACKBONE_MAX_COVERAGE [skip ci]

--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -44,11 +44,12 @@ TREEPL_SMOOTH=100
 ; specified as MERGE_OVERLAP. We will only retain alignments whose divergence does
 ; not exceed BACKBONE_MAX_DISTANCE (to prevent saturation) and we will join alignments
 ; such that each exemplar species participates in at least BACKBONE_MIN_COVERAGE
-; alignments.
+; alignments, which we try to increase up to BACKBONE_MAX_COVERAGE, if available
 ALN_MERGE=blast
 MERGE_OVERLAP=0.51
 BACKBONE_MAX_DISTANCE=0.1
 BACKBONE_MIN_COVERAGE=3
+BACKBONE_MAX_COVERAGE=5
 
 ; parameters for genus trees. within the genera we might accept more rapidly evolving
 ; loci, hence the CLADE_MAX_DISTANCE might exceed BACKBONE_MAX_DISTANCE. This is
